--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "chai": "^2.1.2",
+    "express": "^4.12.3",
     "mocha": "^2.0.1",
     "npm-prepublish": "^1.0.2",
     "sinon": "^1.14.1",
