--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "dateformat": "^1.0.11",
+    "denodeify": "^1.2.1",
     "es6-promise": "^2.0.1",
     "express-handlebars": "^2.0.0",
     "handlebars": "^3.0.0"
