--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dateformat": "^1.0.11",
     "denodeify": "^1.2.1",
     "es6-promise": "^2.0.1",
-    "express-handlebars": "^2.0.0",
+    "express-handlebars": "blendlabs/express-handlebars#master",
     "handlebars": "^3.0.0"
   },
   "devDependencies": {
