--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,9 @@
 {
-  "name": "next-handlebars",
+  "name": "n-handlebars",
   "main": "handlebars.js",
   "version": "0.0.0",
-  "homepage": "https://github.com/Financial-Times/next-handlebars",
-  "authors": [
-    "Rhys Evans <rhys.evans@ft.com>"
-  ],
-  "description": "Enhanced handlebars for nextapplications",
+  "homepage": "https://github.com/Financial-Times/n-handlebars",
+  "description": "Enhanced handlebars for next applications",
   "moduleType": [
     "node"
   ],
