--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dateformat": "^1.0.11",
     "denodeify": "^1.2.1",
     "express-handlebars": "blendlabs/express-handlebars#master",
-    "handlebars": "^4.0.0"
+    "handlebars": "^4.0.0",
+    "html-minifier": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^3.3.0",
@@ -19,5 +20,8 @@
     "npm-prepublish": "^1.0.2",
     "sinon": "^1.14.1",
     "supertest": "^1.1.0"
+  },
+  "engines":  {
+    "node" : "4.2.2"
   }
 }
