--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "express": "^4.12.3",
     "mocha": "^2.0.1",
     "npm-prepublish": "^1.0.2",
+    "origami-build-tools": "^4.3.0",
     "sinon": "^1.14.1",
     "supertest": "^1.1.0"
   },
-  "engines":  {
-    "node" : "4.2.2"
+  "engines": {
+    "node": "4.2.2"
   }
 }
