--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "dateformat": "^1.0.11",
     "denodeify": "^1.2.1",
     "express-handlebars": "blendlabs/express-handlebars#master",
-    "handlebars": "^4.0.0",
-    "html-minifier": "^1.0.0"
+    "handlebars": "^4.0.0"
   },
   "devDependencies": {
     "chai": "^3.3.0",
