--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,10 @@
 machine:
   node:
     version: 4.2.2
+
+deployment:
+  release:
+    tag: /v.*/
+    owner: Financial-Times
+    commands:
+      - make npm-publish
