--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-/npm-debug.log*
-.idea/
-/node_modules/
-.eslintrc.js
 .editorconfig
+.eslintrc.js
+
+/npm-debug.log*
+/package-lock.json
+
+/.idea/
+/node_modules/
